実機再生だけ ZGC + ヒープ上限 2GB で走らせる
遊んでいる最中のカクつきは GC で一瞬止まる時間が正体で、既定の GC は
ヒープが大きいほどその一瞬が伸びる。ZGC はヒープの大きさに関係なく短く、
上限を 2GB に固定しておけば Studio 本体と同じ機械でも押し出し合わない。

ウィンドウを開かない仕事 (検査・テスト・焼き) は MaxRAMPercentage=50 のまま。
flix run はコンパイラとゲームが 1 つの JVM を分け合うので、焼きを 2GB に
締めると大きなゲームで詰まる。

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>